Message bar overflow:hidden for correct ripple effect

--- a/src/less/material/messagebar.less
+++ b/src/less/material/messagebar.less
@@ -8,6 +8,7 @@
     top: auto;
     bottom: 0;
     font-size: 16px;
+    overflow: hidden;
     &.toolbar {
         background: #fff;
     }
